<resources>
    <string name="app_name">Proyecto2</string>
    <string name="log_in">Log In</string>
    <string name="enter">Enter</string>
    <string name="Register">Register</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="recetas">Recipes</string>
    <string name="new_recipe">New Recipe</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="about">About</string>
    <string name="app_label">Recipes</string>
    <string name="search_hint">hint</string>
    <string name="headName">TextView</string>
    <string name="headType">TextView</string>
    <string name="textview">TextView</string>
    <string name="ingriHe">ingriHead</string>
    <string name="stepsHead">TextView</string>
    <string name="nameShow">TextView</string>
    <string name="TypeShow">TextView</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="registerButtonAc">Register</string>
    <string name="refresh">Refresh</string>
    <string name="enter_the_name_of_the_recipe">Enter the name of the Recipe</string>
    <string name="enter_the_type">Enter the type</string>
    <string name="add_the_ingredients">Add the ingredients</string>
    <string name="next">next</string>
    <string name="add_the_steps">Add the steps</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="log_out">Log Out</string>
</resources>
